Refactor: Redesign symbolic animated logo, scale 1.6x across layouts, implement Analytics Hub charts, Student Registry select indicators, and clean warning lints